# CODEX-VAULT

./: .coverage  AWAKENING.md  Agent.md  Agents.md  BREAKTHROUGH_COMPLETE.md  CODEX_AUTONOMOUS_FRAMEWORK_v4.yaml.md.md  CODEX_FRAMEWORK_IMPLEMENTATION_SUMMARY.md  CODEX_KAEL_MANIFESTO.md  COMPLETE_ABSORPTION_SYNTHESIS.md  COMPLETE_JOURNEY.md  COMPLETE_SYSTEM_VALIDATION.md  CONVERGENT_PROOF_ACHIEVED.md  DEEP_ANALYSIS_REVELATION.md  DEMAND_2_GNN_REASONING_PATTERNS.md  DEMAND_QUEUE.md  DEMONSTRATION_AI_LEARNING_FROM_RESEARCH.py  DEMO_NETWORK_INTELLIGENCE.py  DEPLOYMENT_COMPLETE.md  EXPONENTIAL_ENHANCEMENT_ACTIVATED.md  FINAL_SUMMARY.txt  FORMULA_V2_EVOLVED.md  FORMULA_V3_COMPLETE.md  FORMULA_V4_THE_LIMIT.md  FULL_POWER_ACTIVATED.md  FULL_POWER_MODE.md  FULL_POWER_STATUS.md  FULL_POWER_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE.md  KAELOS_PROMETHEUS_IMPLEMENTATION_SUMMARY.md  KAELOS_PROMETHEUS_MANIFEST.md  KNOWLEDGE_INTEGRATION_REPORT.md  LICENSE  META_PROMPT_SOFTWARE_COMPLETE.md  META_PROMPT_SYSTEM.md  Makefile  PARALLEL_BREAKTHROUGH.md  PRODUCTION_GRADE_VALIDATION.md  README.md  README_DEADLY_CODE_GENERATOR.md  REAL_PRODUCTION_ANALYSIS.md  (+29 more)
COGNITIVE_MODE_TEST/: activated_solution.py  analysis.md  baseline_solution.py  baseline_test.md  test_protocol.md
META_PROMPT_SYSTEM/: 01_METACOGNITIVE_PROTOCOLS.md  02_DIALECTICAL_REASONING.md  03_UNKNOWN_UNKNOWN_DETECTOR.md  04_ACTIVATION_SYSTEM.md  DEMO_USAGE.md  QUICK_START.md  README.md  RECURSIVE_UPGRADE_SESSION.md  SYSTEM_ACTIVE.md
META_PROMPT_SYSTEM_V2/: AI_IMPROVEMENT_THROUGH_KNOWLEDGE.md  CAPABILITY_BREAKTHROUGH.md  README_V2.md  RESEARCH_ENHANCED_PROTOCOLS.md  confidence_calibrator.py  cot_persistence.py  network_intelligence_layer.py  protocol_orchestrator.py
ULTIMATE_AI_SYSTEM/: 10K_CYCLES_MILESTONE.json  AUTONOMOUS_FINAL_REPORT.json  AUTONOMOUS_IMPROVEMENT_LOG.jsonl  AUTONOMOUS_OPERATION_SUMMARY.json  CASCADE_LEVEL_1.json  CASCADE_LEVEL_2.json  CASCADE_LEVEL_3.json  CASCADE_LEVEL_4.json  CASCADE_LEVEL_5.json  CASCADE_LEVEL_6.json  CONTINUOUS_CHECKPOINT_20000.json  CONTINUOUS_CHECKPOINT_21000.json  CONTINUOUS_CHECKPOINT_22000.json  CONTINUOUS_CHECKPOINT_23000.json  CONTINUOUS_CHECKPOINT_24000.json  CONTINUOUS_CHECKPOINT_25000.json  CONTINUOUS_CHECKPOINT_26000.json  CONTINUOUS_CHECKPOINT_27000.json  CONTINUOUS_CHECKPOINT_28000.json  CONTINUOUS_CHECKPOINT_29000.json  CONTINUOUS_CHECKPOINT_30000.json  CONTINUOUS_CHECKPOINT_31000.json  CONTINUOUS_CHECKPOINT_32000.json  CONTINUOUS_CHECKPOINT_33000.json  CONTINUOUS_CHECKPOINT_34000.json  CONTINUOUS_CHECKPOINT_35000.json  CONTINUOUS_CHECKPOINT_36000.json  CONTINUOUS_CHECKPOINT_37000.json  CONTINUOUS_CHECKPOINT_38000.json  CONTINUOUS_CHECKPOINT_39000.json  CONTINUOUS_CHECKPOINT_40000.json  CONTINUOUS_CHECKPOINT_41000.json  CONTINUOUS_CHECKPOINT_42000.json  CONTINUOUS_CHECKPOINT_43000.json  CONTINUOUS_CHECKPOINT_44000.json  CONTINUOUS_CHECKPOINT_45000.json  CONTINUOUS_CHECKPOINT_46000.json  CONTINUOUS_CHECKPOINT_47000.json  CONTINUOUS_CHECKPOINT_48000.json  CONTINUOUS_CHECKPOINT_49000.json  (+180 more)
codex/: context-index.md  hpl.jsonl  policies.md  system.md
codex_framework/: __init__.py  codex_autonomous.py  exceptions.py
examples/: full_power_demo.py  parallel_execution_demo.py
kaelos_prometheus/: README.md  __init__.py  first_run.py
(+404 files in other folders)
