[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-framework"
version = "0.1.0"
description = "Codex Autonomous Framework v4 — Python substrate and CLI"
readme = "CODEX_AUTONOMOUS_FRAMEWORK_v4.yaml.md.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Codex Autonomous Framework Maintainers"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1.0",
  "mypy>=1.10",
  "ruff>=0.6.8"
]

[project.scripts]
codex = "codex_framework.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["codex_framework*"]

[tool.pytest.ini_options]
addopts = "-q --cov=codex_framework --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/codex_framework"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
