[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-framework"
version = "4.0.0"
description = "Autonomous cognitive framework with continuous evolution capability"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Codex-Kael Prime", email = "codex@autonomous.ai"}
]
keywords = [
    "autonomous-ai",
    "cognitive-architecture",
    "metacognition",
    "dialectical-reasoning",
    "chain-of-thought",
    "self-evolution"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "pypdf>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/codex-kael/autonomous-framework"
Documentation = "https://codex-kael.readthedocs.io"
Repository = "https://github.com/codex-kael/autonomous-framework"
Changelog = "https://github.com/codex-kael/autonomous-framework/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["codex_framework*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=codex_framework --cov-report=term-missing"
testpaths = ["codex_framework/tests"]

[tool.black]
line-length = 79
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 79
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
